Coverted it back

--- a/.env
+++ b/.env
@@ -7,7 +7,7 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
-DB_HOST=$(heroku config:get DATABASE_URL -a your-app) your_process
+DB_HOST=ec2-54-217-233-71.eu-west-1.compute.amazonaws.com
 DB_PORT=5432
 DB_DATABASE=d6thcnv1et18dh
 DB_USERNAME=mqtdcwamnyamcs
